--- a/index.html
+++ b/index.html
@@ -3,80 +3,133 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PavelPA — Telegram Assistant</title>
+  <title>PavelPA — Telegram-бот</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #1e1e2f, #2e2e40);
-      color: #fff;
       margin: 0;
-      padding: 0;
+      font-family: 'Roboto', sans-serif;
+      background: #000;
+      color: #fff;
+      overflow: hidden;
+    }
+
+    canvas#bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .container {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      animation: fadeIn 1.5s ease-in-out;
+      min-height: 100vh;
+      padding: 2rem;
+      text-align: center;
     }
 
     h1 {
-      font-size: 3em;
-      margin-bottom: 0.2em;
-      animation: slideIn 1.2s ease-out;
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      white-space: nowrap;
+      border-right: 4px solid #00ffff;
+      width: 0;
+      overflow: hidden;
+      animation: typing 3s steps(40, end) forwards, blink 0.75s step-end infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
     }
 
     p {
-      font-size: 1.3em;
-      margin-bottom: 1.5em;
+      font-size: 1.2rem;
       max-width: 600px;
-      text-align: center;
-      animation: fadeIn 2s ease-in;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      animation: fadeIn 2.2s ease-in;
-    }
-
-    a button {
-      padding: 12px 25px;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      background-color: #3a82f7;
-      color: #fff;
-      cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.3s ease;
-    }
-
-    a button:hover {
-      background-color: #1d6ce4;
-      transform: scale(1.05);
+      margin-bottom: 2rem;
+      opacity: 0;
+      animation: fadeIn 2s ease 3s forwards;
     }
 
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      to { opacity: 1; }
     }
 
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(-30px); }
-      to { opacity: 1; transform: translateX(0); }
+    .btn {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background-color: #00ffff;
+      color: #000;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1rem;
+      transition: background-color 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #00cccc;
     }
   </style>
 </head>
 <body>
-  <h1>PavelPA</h1>
-  <p>Твой персональный Telegram-ассистент с голосовыми ответами, заметками, напоминаниями и генерацией изображений.</p>
-  <div class="buttons">
-    <a href="https://t.me/username_pasha_Bot" target="_blank">
-      <button>🚀 Открыть бота в Telegram</button>
-    </a>
-    <a href="https://github.com/pauelky123/pavelPA/raw/main/gpt_bot.py" download>
-      <button>📥 Скачать бота (gpt_bot.py)</button>
-    </a>
+  <canvas id="bg"></canvas>
+
+  <div class="container">
+    <h1>PavelPA — твой Telegram-ассистент</h1>
+    <p>Этот бот поможет тебе с заметками, напоминаниями, ответами на вопросы и даже голосом!</p>
+    <a class="btn" href="https://t.me/username_pasha_Bot" target="_blank">🚀 Перейти к боту</a>
   </div>
+
+  <script>
+    // Анимация звёзд / частиц
+    const canvas = document.getElementById('bg');
+    const ctx = canvas.getContext('2d');
+    let w, h;
+    let particles = [];
+
+    function resize() {
+      w = canvas.width = window.innerWidth;
+      h = canvas.height = window.innerHeight;
+    }
+
+    window.addEventListener('resize', resize);
+    resize();
+
+    for (let i = 0; i < 100; i++) {
+      particles.push({
+        x: Math.random() * w,
+        y: Math.random() * h,
+        r: Math.random() * 2 + 1,
+        dx: (Math.random() - 0.5) * 0.5,
+        dy: (Math.random() - 0.5) * 0.5
+      });
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, w, h);
+      ctx.fillStyle = "#00ffff";
+      for (let p of particles) {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
+        ctx.fill();
+
+        p.x += p.dx;
+        p.y += p.dy;
+
+        if (p.x < 0 || p.x > w) p.dx *= -1;
+        if (p.y < 0 || p.y > h) p.dy *= -1;
+      }
+      requestAnimationFrame(draw);
+    }
+    draw();
+  </script>
 </body>
 </html>
