--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
       font-size: 1.1rem;
       margin-bottom: 24px;
     }
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
     .btn {
       display: inline-flex;
       align-items: center;
@@ -56,6 +62,8 @@
       transition: background-color 0.3s;
       cursor: pointer;
       user-select: none;
+      min-width: 180px;
+      justify-content: center;
     }
     .btn:hover {
       background-color: #1a1a1a;
@@ -65,7 +73,6 @@
       height: 24px;
     }
 
-    /* Дополнительно, для анимации текста можно оставить, если есть */
     @keyframes typing {
       from { width: 0; }
       to { width: 100%; }
@@ -86,7 +93,6 @@
 
   <h1>PavelPA — Telegram-ассистент Павла</h1>
 
-  <!-- Пример другого контента -->
   <p class="typing-text">Привет! Я твой персональный помощник в Telegram.</p>
 
   <div class="about">
@@ -95,10 +101,16 @@
       Привет! Меня зовут Павел — я увлекаюсь программированием, видеомонтажом, технологиями и спортом.<br />
       Создаю полезные проекты, изучаю новое каждый день и делюсь этим с другими.
     </p>
-    <a class="btn" href="https://www.tiktok.com/@pauelky" target="_blank" rel="noopener noreferrer">
-      <img src="https://cdn-icons-png.flaticon.com/512/3046/3046120.png" alt="TikTok" class="icon" />
-      Мой TikTok @pauelky
-    </a>
+    <div class="buttons">
+      <a class="btn" href="https://www.tiktok.com/@pauelky" target="_blank" rel="noopener noreferrer">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046120.png" alt="TikTok" class="icon" />
+        Мой TikTok @pauelky
+      </a>
+      <a class="btn" href="https://t.me/username_pasha_Bot" target="_blank" rel="noopener noreferrer">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111646.png" alt="Telegram" class="icon" />
+        Мой Telegram-бот
+      </a>
+    </div>
   </div>
 
 </body>
